[tool.poetry]
name = "Skills Passport"
version = "0.1.0"
description = "Just a fast api test app"
authors = ["NateuCodes"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
