[tool.poetry]
name = "Skills Passport"
version = "0.1.0"
description = "Just a fast api test app"
authors = ["NateuCodes"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
expects = "^0.9.0"
mamba = "^0.11.2"
mockito = "^1.2.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"
mamba = "^0.11.2"
expects = "^0.9.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
